--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         .hero {
             height: 100vh;
             min-height: 700px;
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?ixlib=rb-4.0.3') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://ibb.co/LXKWWDM5') no-repeat center center/cover;
             display: flex;
             align-items: center;
             color: var(--light);
@@ -662,7 +662,7 @@
                     <a href="#services" class="btn">Our Services</a>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?ixlib=rb-4.0.3" alt="Ujamaa Team">
+                    <img src="https://ibb.co/TMj6Wyn6" alt="Ujamaa Team">
                 </div>
             </div>
         </div>
