--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         .hero {
             height: 100vh;
             min-height: 700px;
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?ixlib=rb-4.0.3') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://ibb.co/LXKWWDM5') no-repeat center center/cover;
             display: flex;
             align-items: center;
             color: var(--light);
@@ -662,7 +662,7 @@
                     <a href="#services" class="btn">Our Services</a>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?ixlib=rb-4.0.3" alt="Ujamaa Team">
+                    <img src="https://ibb.co/tMw02wKw" alt="Ujamaa Team">
                 </div>
             </div>
         </div>
@@ -716,28 +716,28 @@
             </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1529900748604-07564a03e7a6?ixlib=rb-4.0.3" alt="Football Jersey">
+                    <img src="https://ibb.co/TMj6Wyn6" alt="Football Jersey">
                     <div class="portfolio-overlay">
-                        <h3>Kampala United FC</h3>
-                        <p>Custom football kits for the 2023 season</p>
+                        <h3>Abakawuu</h3>
+                        <p>Custom football kits for the 2025 season</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1560272564-c83ee6bf2276?ixlib=rb-4.0.3" alt="Basketball Jersey">
+                    <img src="https://ibb.co/RGBQ586K" alt="Basketball Jersey">
                     <div class="portfolio-overlay">
-                        <h3>Nile Hoopers</h3>
+                        <h3>Stono</h3>
                         <p>Performance basketball uniforms</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?ixlib=rb-4.0.3" alt="Corporate Branding">
+                    <img src="https://ibb.co/rN1GtWN" alt="Corporate Branding">
                     <div class="portfolio-overlay">
                         <h3>Tech Solutions UG</h3>
                         <p>Complete corporate branding package</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1626248801379-51a0c4b6fcf9?ixlib=rb-4.0.3" alt="Rugby Jersey">
+                    <img src="https://ibb.co/v4r4DrJT" alt="Rugby Jersey">
                     <div class="portfolio-overlay">
                         <h3>Victoria Rhinos RFC</h3>
                         <p>Rugby team home and away kits</p>
